--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3468,6 +3468,13 @@ input, select, textarea {
 		color: #f7f7f7;
 	}
 
-	/* #left-side-form{
-		padding-left: 0px;
-	} */
+	#top .image {
+		border-radius: 100%;
+		width: 20em;
+		height: 20em;
+		margin: 0;
+	}
+
+		#top .image img {
+			border-radius: 100%;
+		}
