--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2685,7 +2685,7 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background-image: url("../../images/main-bk.jpg");
+		background-image: url("../../images/main-bk.webp");
 		background-position: center center;
 		background-size: cover;
 		height: 28em;
